// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Descriptor> matches snapshot 1`] = `
<div>
  <h2>
    aut enim iure facilis ut explicabo iure
  </h2>
  <p>
    fugiat error molestiae laborum est possimus assumenda
  </p>
</div>
`;

exports[`<Descriptor> matches snapshot 2`] = `
<div
  className="vitae occaecati officia iure nisi ut maiores"
>
  <h2>
    quia autem et modi tenetur amet modi
  </h2>
  <p>
    fuga reprehenderit soluta non omnis consequatur enim
  </p>
</div>
`;

exports[`<Descriptor> matches snapshot 3`] = `
<div>
  <h2>
    ipsa tempora aut sint aperiam occaecati illum
  </h2>
  <p>
    dolorum ab aliquam id sit delectus vel
  </p>
</div>
`;

exports[`<Descriptor> matches snapshot 4`] = `
<div
  className="animi vel provident dicta perferendis dolorum cupiditate"
>
  <h2>
    omnis laborum exercitationem est sapiente laudantium molestias
  </h2>
  <p>
    saepe ut assumenda sint quia sed exercitationem
  </p>
</div>
`;

exports[`<Descriptor> matches snapshot 5`] = `
<div
  className="assumenda quasi adipisci mollitia iste itaque omnis"
>
  <h2>
    corporis commodi eaque nisi cum ducimus nemo
  </h2>
  <p>
    rem similique temporibus aliquam sed sapiente soluta
  </p>
</div>
`;

exports[`<Descriptor> matches snapshot 6`] = `
<div>
  <h2>
    autem sit aspernatur aspernatur quam eligendi est
  </h2>
  <p>
    ipsam laboriosam non itaque voluptas ea ducimus
  </p>
</div>
`;

exports[`<Descriptor> matches snapshot 7`] = `
<div>
  <h2>
    sit suscipit omnis necessitatibus maiores ullam quae
  </h2>
  <p>
    ex expedita est doloremque explicabo eaque necessitatibus
  </p>
</div>
`;

exports[`<Descriptor> matches snapshot 8`] = `
<div
  className="corporis qui aut nobis quo consequatur harum"
>
  <h2>
    nulla aut sunt est rerum at sint
  </h2>
  <p>
    enim et doloremque voluptate in sunt occaecati
  </p>
</div>
`;

exports[`<Descriptor> matches snapshot 9`] = `
<div
  className="dolores fugiat quis et voluptas culpa et"
>
  <h2>
    nostrum aut corrupti sed consectetur soluta inventore
  </h2>
  <p>
    repellat eveniet assumenda quis quae iusto sapiente
  </p>
</div>
`;

exports[`<Descriptor> matches snapshot 10`] = `
<div>
  <h2>
    similique et maxime quia dolores quisquam aut
  </h2>
  <p>
    voluptatem cumque nihil iste est unde rem
  </p>
</div>
`;

exports[`<Descriptor> matches snapshot 11`] = `
<div>
  <h2>
    ut occaecati at odit tempora at modi
  </h2>
  <p>
    qui facere in ut odit animi in
  </p>
</div>
`;

exports[`<Descriptor> matches snapshot 12`] = `
<div
  className="occaecati illum laborum quos eum voluptate sit"
>
  <h2>
    in rerum libero odit aut labore qui
  </h2>
  <p>
    assumenda deserunt consequatur itaque et in fugit
  </p>
</div>
`;

exports[`<Descriptor> matches snapshot 13`] = `
<div>
  <h2>
    aut autem ut ullam et possimus sint
  </h2>
  <p>
    fugiat et et aut quidem voluptatibus libero
  </p>
</div>
`;

exports[`<Descriptor> matches snapshot 14`] = `
<div
  className="fugiat maiores autem est esse quos minus"
>
  <h2>
    animi quis expedita et optio consequatur velit
  </h2>
  <p>
    nihil quasi minus quo sunt possimus earum
  </p>
</div>
`;

exports[`<Descriptor> matches snapshot 15`] = `
<div
  className="voluptate necessitatibus excepturi et qui sunt nesciunt"
>
  <h2>
    quas repellendus in dolores totam animi ipsum
  </h2>
  <p>
    eaque atque quos rerum nobis nam dolor
  </p>
</div>
`;

exports[`<Descriptor> matches snapshot 16`] = `
<div>
  <h2>
    ipsa consequuntur quidem dolorem quia consequatur omnis
  </h2>
  <p>
    consequatur consequatur accusantium molestiae non sint et
  </p>
</div>
`;

exports[`<Descriptor> matches snapshot 17`] = `
<div
  className="ab assumenda animi non quis quis nobis"
>
  <h2>
    voluptatibus similique blanditiis in eum ut dignissimos
  </h2>
  <p>
    aliquam molestiae occaecati a culpa facilis eligendi
  </p>
</div>
`;

exports[`<Descriptor> matches snapshot 18`] = `
<div>
  <h2>
    officia eum repudiandae minima temporibus ducimus quia
  </h2>
  <p>
    quia aut sint cumque sunt mollitia quibusdam
  </p>
</div>
`;

exports[`<Descriptor> matches snapshot 19`] = `
<div
  className="assumenda ut neque saepe est labore sed"
>
  <h2>
    ex architecto ut corrupti voluptatem quia dolores
  </h2>
  <p>
    nesciunt voluptas rem repellendus nihil repudiandae aliquid
  </p>
</div>
`;

exports[`<Descriptor> matches snapshot 20`] = `
<div
  className="dolor voluptates sequi perferendis nostrum aliquid ea"
>
  <h2>
    ut est sed qui repellat assumenda et
  </h2>
  <p>
    architecto accusantium vel enim sint voluptatem porro
  </p>
</div>
`;

exports[`<Descriptor> matches snapshot 21`] = `
<div>
  <h2>
    quia dolor eum velit aperiam voluptas eos
  </h2>
  <p>
    vitae consequuntur non sit et ut voluptatem
  </p>
</div>
`;

exports[`<Descriptor> matches snapshot 22`] = `
<div
  className="quam consequatur ipsam sed nobis excepturi saepe"
>
  <h2>
    qui harum a aut esse unde ea
  </h2>
  <p>
    quis molestiae et dicta odit vel quisquam
  </p>
</div>
`;

exports[`<Descriptor> matches snapshot 23`] = `
<div>
  <h2>
    culpa suscipit totam libero necessitatibus quis ratione
  </h2>
  <p>
    pariatur voluptates odio rem saepe iure quia
  </p>
</div>
`;

exports[`<Descriptor> matches snapshot 24`] = `
<div>
  <h2>
    libero explicabo at quae autem eligendi nihil
  </h2>
  <p>
    qui hic dolore quibusdam quasi quisquam ut
  </p>
</div>
`;

exports[`<Descriptor> matches snapshot 25`] = `
<div>
  <h2>
    ut quasi quasi accusantium modi molestiae rerum
  </h2>
  <p>
    aut optio est eius molestiae odio architecto
  </p>
</div>
`;

exports[`<Descriptor> matches snapshot 26`] = `
<div
  className="non quis sed ea qui minima laboriosam"
>
  <h2>
    sint perferendis in dolorem repudiandae possimus dignissimos
  </h2>
  <p>
    voluptatibus reiciendis ut eos commodi at impedit
  </p>
</div>
`;

exports[`<Descriptor> matches snapshot 27`] = `
<div
  className="esse qui est aut laborum nesciunt dolor"
>
  <h2>
    illo excepturi esse porro impedit omnis quo
  </h2>
  <p>
    voluptate esse aliquam molestiae quas omnis qui
  </p>
</div>
`;

exports[`<Descriptor> matches snapshot 28`] = `
<div
  className="aut quia cumque architecto eos quos tenetur"
>
  <h2>
    distinctio reiciendis perspiciatis ut illo sit rerum
  </h2>
  <p>
    quia nam laborum molestiae aut quos quasi
  </p>
</div>
`;

exports[`<Descriptor> matches snapshot 29`] = `
<div
  className="accusamus molestiae quia est reprehenderit commodi perspiciatis"
>
  <h2>
    ut distinctio molestias placeat exercitationem unde minus
  </h2>
  <p>
    et quos esse dolores vitae delectus molestias
  </p>
</div>
`;

exports[`<Descriptor> matches snapshot 30`] = `
<div>
  <h2>
    sit laboriosam quis voluptatem quod tempore temporibus
  </h2>
  <p>
    dolorem nihil optio est non ipsa odio
  </p>
</div>
`;

exports[`<Descriptor> matches snapshot 31`] = `
<div
  className="impedit dolores saepe dolor incidunt vero quia"
>
  <h2>
    officiis omnis rem officiis et placeat ipsum
  </h2>
  <p>
    consequatur provident qui delectus qui qui ab
  </p>
</div>
`;

exports[`<Descriptor> matches snapshot 32`] = `
<div
  className="assumenda officia aut id possimus quas dolor"
>
  <h2>
    voluptatibus omnis fugit labore quia et beatae
  </h2>
  <p>
    eum incidunt provident deleniti consequuntur velit ad
  </p>
</div>
`;
